DRILL-1491: Support for JDK 8
Changed jdk version from 7 to 8 in pom.xml travis and drill-config.sh

This closes #1143